--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     </title>
   </head>
   <body>
-    <script
+    <!-- <script
       src="./js/variables_and_types.js"
+      type="module"
+    ></script> -->
+    <script
+      src="./js/numbers.js"
       type="module"
     ></script>
   </body>
