--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<!-- <script  src="./js/variables_and_types.js" type="module"></script> -->
 		<!-- <script src="./js/numbers.js" type="module"></script> -->
-		<script src="./js/strings.js" type="module"></script>
+		<!-- <script src="./js/strings.js" type="module"></script> -->
+		<script src="./js/arrays.js" type="module"></script>
 	</body>
 </html>
