--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<button class="js-button">
+		<!-- <button class="js-button">
 			Enter
 			<span role="image" aria-label="Magic button"></span>
-		</button>
-		<!-- <script  src="./js/variables_and_types.js" type="module"></script> -->
+		</button> -->
+		<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+		<script src="./js/lodash.js/" type="module"></script>
+
+		<!-- <script src="./js/variables_and_types.js" type="module"></script>
+		-->
 		<!-- <script src="./js/numbers.js" type="module"></script> -->
 		<!-- <script src="./js/strings.js" type="module"></script> -->
-		<!-- <script src="./js/arrays.js" type="module"></script>
-		<script src="./js/objects.js" type="module"></script> -->
+		<script src="./js/arrays.js" type="module"></script>
+		<!--<script src="./js/objects.js" type="module"></script>
 		<script src="./js/call_back.js" type="module"></script>
+		<script src="./js/basic.js" type="module"></script>-->
 	</body>
 </html>
